# edge-Intrusion-detector-imx6ull

./: CMakeLists.txt  README.md  build.sh  quantize_yolo.sh  quantize_yolov11.sh  toolchain.cmake  日志.txt
YOLO-FastestV2_INT8/: yolo_cam_detect.cpp  yolofastestv2.h
YOLOv11n_INT8/: yolov11n.param
build-arm/: CMakeCache.txt  Makefile  cmake_install.cmake
md/: 项目需求.txt
models/YOLO-FastestV2_FP16/: mqtt.conf  mqtt_client.h  yolofastestv2.cpp
models/YOLO-FastestV2_INT8/: hmac_sha256.h  mqtt.conf  yolo-fastestv2.param  yolo-fastestv2.table
models/YOLOv11n_FP16/: mqtt_client.h  yolo_cam_detect.cpp  yolov11.h
models/YOLOv11n_INT8/: yolov11.cpp  yolov11_cam_detect.cpp  yolov11n.table
models/nanodet_m_FP16/: nanodet.h
models/nanodet_m_INT8/: model.param  nanodet.cpp
nanodet_m_FP16/: mqtt.conf  nanodet_cam_detect.cpp
nanodet_m_INT8/: nanodet_m.table
